--- a/packages/web-new/src/app.html
+++ b/packages/web-new/src/app.html
@@ -12,7 +12,7 @@
 
 		<script>
 			if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
-				document.body.setAttribute('data-theme', 'dim');
+				document.body.setAttribute('data-theme', 'black');
 			}
 		</script>
 		<script
